@@ -3,4 +3,15 @@
 
 class Net::SSLeay::OPENSSL_INIT {
   
+  use Net::SSLeay::OPENSSL_INIT_SETTINGS;
+  
+  # Class Methods
+  native static method new : Net::SSLeay::OPENSSL_INIT_SETTINGS ();
+  
+  native static method set_config_filename : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $filename : string);
+  
+  native static method set_config_file_flags : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $flags : long);
+  
+  native static method set_config_appname : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $name : string);
+  
 }
