@@ -7,6 +7,15 @@
     * Add Net::SSLeay::ASN1_TIME#DESTROY method.
     * Add Net::SSLeay::EVP_MD#DESTROY method.
     * Add Net::SSLeay::OPENSSL_INIT class.
+    * Add the following methods to Net::SSLeay::OPENSSL_INIT class.
+      static method new : Net::SSLeay::OPENSSL_INIT_SETTINGS ();
+      
+      static method set_config_filename : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $filename : string);
+      
+      static method set_config_file_flags : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $flags : long);
+      
+      static method set_config_appname : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $name : string);
+
   [Incompatible Changes]
     * Move Net::SSLeay::Util::X509#get_ocsp_uri method to Net::SSLeay::X509#P_get_ocsp_uri method.
     * Move Net::SSLeay::Util#dump_peer_certificate method to Net::SSLeay#P_dump_peer_certificate method.
